--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spillthepdf",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,19 +10,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.2",
     "next": "^15.1.2",
+    "postgres": "^3.4.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.10",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
